# Physics-Rag

./: Cargo.toml  README.md  requirements.txt  set_env.py
agents/: ai_discovery_workflow.py  crewai_agents.py  personas.json  quantum_topology_bridge.py
agents/tools/: rtx_ppf_tools.py  webgpu_tools.py
config/: settings.toml
data/personas/: albert_einstein.md  all_physicist_personas_summary.md  erwin_schrodinger.md  niels_bohr.md  paul_dirac.md  richard_feynman.md  werner_heisenberg.md
docs/: mem0_core_concepts.md  mem0_crewai_integration.md  mem0_rl_data_best_practices.md  system_architecture.md
quantum_confidence_overlay 2/: gpui_renderer.rs  quantum_prediction.rs
quantum_hybrid_patch/: README.md
quantum_hybrid_patch/WebGL:cuda/: AI_Quantum_Hybrid_Full-vdev-20250325-2025-03-25_16-41-38.txt  generate_quantum_model.py
quantum_hybrid_patch/WebGL:cuda/AI_Quantum_Hybrid_Agent/: index.html  tfjs_webgpu_model.js  webrtc_quantum_sync.js
quantum_hybrid_patch/WebGL:cuda/AI_Quantum_Hybrid_Agent_Complete/: onnx_inference.js  (+2 more)
quantum_hybrid_patch/public/: gaqn_generator.js  onnx_inference.js  ppf_worker.js  quantumLoss_loss.js  quantum_data.js  quantumx_convertor.py  tfjs_Cheat_training_pipeline.js  tfjs_training_pipeline.js  webgpu_fallback.js  webrtc_quantum_sync.js
src/: main.rs
src/api/: server.rs
src/data_ingestion/: mod.rs  pdf_parser.rs  scraper.rs  youtube_parser.rs
src/mem0_client/: mem0_python_client.py  mod.rs  python_bridge.rs
src/pre_processing/: mod.rs  text_processor.rs
src/ui/: mod.rs  web_app.rs
src/utils/: mod.rs
static/: index.html
(+17 files in other folders)
