[package]
name = "rag_physics_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
regex = "1.10"


actix-web = "4"


actix-files = "0.6"


toml = "0.8"
